--- a/src/home.css
+++ b/src/home.css
@@ -120,7 +120,7 @@ section.user {
   padding-top: 6em;
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: auto;
   justify-content: flex-end;
   /* border: 2px solid #fff; */
 }
